# OpenStock

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: database.rs  error.rs  main.rs  middleware.rs
api/src/auth/: logic.rs  mod.rs  queries.rs  routes.rs
api/src/db_models/: auth.rs  user.rs
api/src/user/: mod.rs  queries.rs  routes.rs
desktop/: Cargo.toml
desktop/src/: error.rs  main.rs
desktop/src/pages/: home.rs  login.rs  mod.rs
models/: Cargo.toml
models/src/: auth.rs
