[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
lazy_static = "1.5.0"
models = { path = "../models" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "derive", "uuid", "chrono", "time", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
